--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "build:dev": "rete --build rete.config.js --watch",
     "prepublishOnly": "npm run build"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Vitaliy Stoliarov",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/retejs/connection-path-plugin.git"
+  },
   "dependencies": {
     "d3-shape": "^1.2.2"
   },
