prevent failure on .install method not found

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rete-connection-path-plugin",
   "version": "0.3.0",
   "description": "",
-  "main": "build/connection-path-plugin.min.js",
+  "main": "build/connection-path-plugin.common.js",
   "scripts": {
     "build": "rete --build rete.config.js",
     "build:dev": "rete --build rete.config.js --watch",
