--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "rete-connection-path-plugin",
-  "version": "0.3.1",
+  "version": "0.3.2-alpha1",
   "description": "",
   "main": "build/connection-path-plugin.common.js",
   "module": "build/connection-path-plugin.esm.js",
+  "types": "types/index.d.ts",
   "scripts": {
     "build": "rete --build rete.config.js",
     "build:dev": "rete --build rete.config.js --watch",
@@ -16,9 +17,9 @@
     "url": "https://github.com/retejs/connection-path-plugin.git"
   },
   "dependencies": {
-    "d3-shape": "^1.2.2"
+    "d3-shape": "^3.1.0"
   },
   "devDependencies": {
-    "rete-cli": "0.6.0-rc.3"
+    "rete-cli": "^0.6.1-rc.1"
   }
 }
