--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "rete-connection-path-plugin",
-  "version": "0.3.1",
+  "version": "2.0.0-beta.1",
   "description": "",
   "main": "build/connection-path-plugin.common.js",
   "module": "build/connection-path-plugin.esm.js",
+  "types": "types",
   "scripts": {
-    "build": "rete --build rete.config.js",
-    "build:dev": "rete --build rete.config.js --watch",
-    "prepublishOnly": "npm run build"
+    "build": "rete build -c rete.config.ts",
+    "build:dev": "rete build -c rete.config.ts --watch",
+    "prepublishOnly": "npm run build",
+    "lint": "rete lint"
   },
   "author": "Vitaliy Stoliarov",
   "license": "MIT",
@@ -15,10 +17,19 @@
     "type": "git",
     "url": "https://github.com/retejs/connection-path-plugin.git"
   },
-  "dependencies": {
-    "d3-shape": "^1.2.2"
+  "peerDependencies": {
+    "d3-shape": "^1.2.2",
+    "rete": "*",
+    "rete-area-plugin": "file:../area-plugin/rete-area-plugin-0.2.1.tgz",
+    "rete-render-utils": "file:../render-utils/rete-render-utils-0.1.0.tgz"
   },
   "devDependencies": {
-    "rete-cli": "0.6.0-rc.3"
+    "@types/d3-shape": "^3.1.1",
+    "d3-shape": "^1.2.2",
+    "rete": "file:../rete/rete-2.0.0-beta.1.tgz",
+    "rete-area-plugin": "file:../area-plugin/rete-area-plugin-0.2.1.tgz",
+    "rete-cli": "1.0.0-beta.16",
+    "rete-render-utils": "file:../render-utils/rete-render-utils-0.1.0.tgz",
+    "typescript": "4.8.4"
   }
 }
