--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "",
   "scripts": {
     "build": "rete build -c rete.config.ts",
-    "build:dev": "rete build -c rete.config.ts --watch",
-    "prepublishOnly": "npm run build",
     "lint": "rete lint"
   },
   "author": "Vitaliy Stoliarov",
@@ -16,17 +14,17 @@
   },
   "peerDependencies": {
     "d3-shape": "^1.2.2",
-    "rete": "file:../rete/dist/package.tgz",
-    "rete-area-plugin": "file:../area-plugin/dist/package.tgz",
-    "rete-render-utils": "file:../render-utils/dist/package.tgz"
+    "rete": "^2.0.0-beta.1",
+    "rete-area-plugin": "^2.0.0-beta.1",
+    "rete-render-utils": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "@types/d3-shape": "^3.1.1",
     "d3-shape": "^1.2.2",
-    "rete": "file:../rete/dist/package.tgz",
-    "rete-area-plugin": "file:../area-plugin/dist/package.tgz",
-    "rete-cli": "^1.0.0-beta.18",
-    "rete-render-utils": "file:../render-utils/dist/package.tgz",
+    "rete": "^2.0.0-beta.1",
+    "rete-area-plugin": "^2.0.0-beta.1",
+    "rete-cli": "^1.0.0-beta.25",
+    "rete-render-utils": "^2.0.0-beta.1",
     "typescript": "4.8.4"
   }
 }
