--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rete-connection-path-plugin",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0-beta.4",
   "description": "",
   "scripts": {
     "build": "rete build -c rete.config.ts",
@@ -32,8 +32,11 @@
     "d3-shape": "^1.2.2",
     "rete": "^2.0.0-beta.1",
     "rete-area-plugin": "^2.0.0-beta.1",
-    "rete-cli": "^1.0.0-beta.26",
+    "rete-cli": "^1.0.0-beta.29",
     "rete-render-utils": "^2.0.0-beta.1",
     "typescript": "4.8.4"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.21.0"
   }
 }
