--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
     "d3-shape": "^3.0.0",
     "rete": "^2.0.1",
     "rete-area-plugin": "^2.0.0",
-    "rete-cli": "^1.0.2",
-    "rete-render-utils": "^2.0.0",
-    "typescript": "4.8.4"
+    "rete-cli": "~2.0.0",
+    "rete-render-utils": "^2.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.21.0"
